[package]
name = "rust_blocks"
version = "0.1.0"
authors = ["Jean-Philippe Moresmau <jean-philippe.moresmau@asg.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5"
cgmath = "0.17.0"
mint = "0.5.4"
rand = "0.7.3"